# retro-launcher

./: CMakeLists.txt  README.md
include/: colors.h  graphics.h  input.h  menu.h
src/: graphics.c  input.c  main.c  menu.c
